package com.bhs.rs.pruefungen;

/**
 * Created by JAbanto on 15.01.2018.
 */



public class Main {

    public static void main(String[] args) {
         Runner start = new Runner();
         start.run();
    }

}
