@startuml

title __AP2_AUFGABEN's Class Diagram__\n

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Angebot {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Model {
      abstract class Aufgabe {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Util {
      class AufgabenContext {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Util {
      class CurrentDate {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    class Main {
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Views {
      class Menu {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Views {
      class MenuItem {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Route {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    class Runner {
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Sommer2015_GA1_H2_LKW {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Sommer2015_GA1_H3_Angebot {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Strecke {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Views {
      class ViewTools {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Winter2011_GA1_H2_PGenerator {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Winter2013_GA1_H3_Report {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Aufgaben {
      class Winter2015_GA1_H5_Logout {
      }
    }
  }
  

  package com.bhs.rs.pruefungen {
    package com.bhs.rs.pruefungen.Parsing {
      class XML_work {
      }
    }
  }
  

  Angebot o-- Route : route
  AufgabenContext o-- XML_work : xml_work
  Menu o-- MenuItem : quitItem
  MenuItem o-- Aufgabe : aufgabe
  Runner o-- Menu : menu
  Sommer2015_GA1_H2_LKW -up-|> Aufgabe
  Sommer2015_GA1_H2_LKW o-- AufgabenContext : aufgabenContext
  Sommer2015_GA1_H3_Angebot -up-|> Aufgabe
  Winter2011_GA1_H2_PGenerator -up-|> Aufgabe
  Winter2013_GA1_H3_Report -up-|> Aufgabe
  Winter2013_GA1_H3_Report o-- XML_work : xml_work
  Winter2015_GA1_H5_Logout -up-|> Aufgabe
  Winter2015_GA1_H5_Logout o-- XML_work : xml_leser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
